--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <link rel="stylesheet" href="style2.css" />
-		<link rel="stylesheet" href="fonts.css">
+	<link rel="stylesheet" href="fonts.css"/>
         <title>Ejercicio 2 DGPI</title>
     </head>
 
