--- a/clasificacion2.htm
+++ b/clasificacion2.htm
@@ -3,7 +3,7 @@ xmlns:x="urn:schemas-microsoft-com:office:excel"
 xmlns="http://www.w3.org/TR/REC-html40">
 
 <head>
-<meta http-equiv=Content-Type content="text/html; charset=windows-1252">
+<meta http-equiv=Content-Type content="text/html; charset=utf-8">
 <meta name=ProgId content=Excel.Sheet>
 <meta name=Generator content="Microsoft Excel 15">
 <link rel=File-List href="calsificacion2_archivos/filelist.xml">
@@ -271,12 +271,12 @@ xmlns="http://www.w3.org/TR/REC-html40">
 
 <body>
 <!--[if !excel]>&nbsp;&nbsp;<![endif]-->
-<!--La siguiente información se generó mediante el Asistente para publicar como
-página web de Microsoft Excel.-->
-<!--Si se vuelve a publicar el mismo elemento desde Excel, se reemplazará toda
-la información comprendida entre las etiquetas DIV.-->
+<!--La siguiente informaciÃ³n se generÃ³ mediante el Asistente para publicar como
+pÃ¡gina web de Microsoft Excel.-->
+<!--Si se vuelve a publicar el mismo elemento desde Excel, se reemplazarÃ¡ toda
+la informaciÃ³n comprendida entre las etiquetas DIV.-->
 <!----------------------------->
-<!--INICIO DE LOS RESULTADOS DEL ASISTENTE PARA PUBLICAR COMO PÁGINA WEB DE
+<!--INICIO DE LOS RESULTADOS DEL ASISTENTE PARA PUBLICAR COMO PÃGINA WEB DE
 EXCEL -->
 <!----------------------------->
 
@@ -299,7 +299,7 @@ EXCEL -->
  </tr>
  <tr height=21 style='height:15.75pt;box-sizing: inherit;outline: 0px'>
   <td colspan=2 height=21 class=xl758276 width=136 style='height:15.75pt;
-  width:102pt'><span style='box-sizing: inherit;outline: 0px'>CLASIFICACIÓN</span></td>
+  width:102pt'><span style='box-sizing: inherit;outline: 0px'>CLASIFICACIÃ“N</span></td>
   <td class=xl668276 width=68 style='width:51pt'>PJ</td>
   <td class=xl668276 width=68 style='width:51pt'>PG</td>
   <td class=xl668276 width=68 style='width:51pt'>PE</td>
@@ -354,7 +354,7 @@ EXCEL -->
   <td class=xl698276 width=89 style='width:67pt;box-sizing: inherit;border-top-style:
   initial;border-right-style:initial;border-left-style:initial;border-top-color:
   initial;border-right-color:initial;border-left-color:initial;border-image: initial;
-  outline: 0px'>Atlético</td>
+  outline: 0px'>AtlÃ©tico</td>
   <td class=xl708276 width=68 style='width:51pt;box-sizing: inherit;border-top-style:
   initial;border-right-style:initial;border-left-style:initial;border-top-color:
   initial;border-right-color:initial;border-left-color:initial;border-image: initial;
@@ -772,7 +772,7 @@ EXCEL -->
   <td class=xl698276 width=89 style='width:67pt;box-sizing: inherit;border-top-style:
   initial;border-right-style:initial;border-left-style:initial;border-top-color:
   initial;border-right-color:initial;border-left-color:initial;border-image: initial;
-  outline: 0px'>Leganés</td>
+  outline: 0px'>LeganÃ©s</td>
   <td class=xl708276 width=68 style='width:51pt;box-sizing: inherit;border-top-style:
   initial;border-right-style:initial;border-left-style:initial;border-top-color:
   initial;border-right-color:initial;border-left-color:initial;border-image: initial;
@@ -924,7 +924,7 @@ EXCEL -->
   <td class=xl698276 width=89 style='width:67pt;box-sizing: inherit;border-top-style:
   initial;border-right-style:initial;border-left-style:initial;border-top-color:
   initial;border-right-color:initial;border-left-color:initial;border-image: initial;
-  outline: 0px'>Alavés</td>
+  outline: 0px'>AlavÃ©s</td>
   <td class=xl708276 width=68 style='width:51pt;box-sizing: inherit;border-top-style:
   initial;border-right-style:initial;border-left-style:initial;border-top-color:
   initial;border-right-color:initial;border-left-color:initial;border-image: initial;
@@ -1000,7 +1000,7 @@ EXCEL -->
   <td class=xl698276 width=89 style='width:67pt;box-sizing: inherit;border-top-style:
   initial;border-right-style:initial;border-left-style:initial;border-top-color:
   initial;border-right-color:initial;border-left-color:initial;border-image: initial;
-  outline: 0px'>Málaga</td>
+  outline: 0px'>MÃ¡laga</td>
   <td class=xl708276 width=68 style='width:51pt;box-sizing: inherit;border-top-style:
   initial;border-right-style:initial;border-left-style:initial;border-top-color:
   initial;border-right-color:initial;border-left-color:initial;border-image: initial;
@@ -1087,7 +1087,7 @@ EXCEL -->
 
 
 <!----------------------------->
-<!--FINAL DE LOS RESULTADOS DEL ASISTENTE PARA PUBLICAR COMO PÁGINA WEB DE
+<!--FINAL DE LOS RESULTADOS DEL ASISTENTE PARA PUBLICAR COMO PÃGINA WEB DE
 EXCEL-->
 <!----------------------------->
 </body>
