--- a/historico.htm
+++ b/historico.htm
@@ -3,7 +3,7 @@ xmlns:x="urn:schemas-microsoft-com:office:excel"
 xmlns="http://www.w3.org/TR/REC-html40">
 
 <head>
-<meta http-equiv=Content-Type content="text/html; charset=windows-1252">
+<meta http-equiv=Content-Type content="text/html; charset=utf-8">
 <meta name=ProgId content=Excel.Sheet>
 <meta name=Generator content="Microsoft Excel 15">
 <link rel=File-List href="historico_archivos/filelist.xml">
@@ -219,12 +219,12 @@ xmlns="http://www.w3.org/TR/REC-html40">
 
 <body>
 <!--[if !excel]>&nbsp;&nbsp;<![endif]-->
-<!--La siguiente información se generó mediante el Asistente para publicar como
-página web de Microsoft Excel.-->
-<!--Si se vuelve a publicar el mismo elemento desde Excel, se reemplazará toda
-la información comprendida entre las etiquetas DIV.-->
+<!--La siguiente informaciÃ³n se generÃ³ mediante el Asistente para publicar como
+pÃ¡gina web de Microsoft Excel.-->
+<!--Si se vuelve a publicar el mismo elemento desde Excel, se reemplazarÃ¡ toda
+la informaciÃ³n comprendida entre las etiquetas DIV.-->
 <!----------------------------->
-<!--INICIO DE LOS RESULTADOS DEL ASISTENTE PARA PUBLICAR COMO PÁGINA WEB DE
+<!--INICIO DE LOS RESULTADOS DEL ASISTENTE PARA PUBLICAR COMO PÃGINA WEB DE
 EXCEL -->
 <!----------------------------->
 
@@ -370,7 +370,7 @@ EXCEL -->
 
 
 <!----------------------------->
-<!--FINAL DE LOS RESULTADOS DEL ASISTENTE PARA PUBLICAR COMO PÁGINA WEB DE
+<!--FINAL DE LOS RESULTADOS DEL ASISTENTE PARA PUBLICAR COMO PÃGINA WEB DE
 EXCEL-->
 <!----------------------------->
 </body>
