--- a/estad.htm
+++ b/estad.htm
@@ -3,7 +3,7 @@ xmlns:x="urn:schemas-microsoft-com:office:excel"
 xmlns="http://www.w3.org/TR/REC-html40">
 
 <head>
-<meta http-equiv=Content-Type content="text/html; charset=windows-1252">
+<meta http-equiv=Content-Type content="text/html; charset=utf-8">
 <meta name=ProgId content=Excel.Sheet>
 <meta name=Generator content="Microsoft Excel 15">
 <link rel=File-List href="estad_archivos/filelist.xml">
@@ -561,12 +561,12 @@ xmlns="http://www.w3.org/TR/REC-html40">
 
 <body>
 <!--[if !excel]>&nbsp;&nbsp;<![endif]-->
-<!--La siguiente información se generó mediante el Asistente para publicar como
-página web de Microsoft Excel.-->
-<!--Si se vuelve a publicar el mismo elemento desde Excel, se reemplazará toda
-la información comprendida entre las etiquetas DIV.-->
+<!--La siguiente informaciÃ³n se generÃ³ mediante el Asistente para publicar como
+pÃ¡gina web de Microsoft Excel.-->
+<!--Si se vuelve a publicar el mismo elemento desde Excel, se reemplazarÃ¡ toda
+la informaciÃ³n comprendida entre las etiquetas DIV.-->
 <!----------------------------->
-<!--INICIO DE LOS RESULTADOS DEL ASISTENTE PARA PUBLICAR COMO PÁGINA WEB DE
+<!--INICIO DE LOS RESULTADOS DEL ASISTENTE PARA PUBLICAR COMO PÃGINA WEB DE
 EXCEL -->
 <!----------------------------->
 
@@ -738,7 +738,7 @@ EXCEL -->
   style='box-sizing: border-box;border-top-style:initial;border-right-style:
   initial;border-left-style:initial;border-top-color:initial;border-right-color:
   initial;border-left-color:initial;border-image: initial;outline: 0px;
-  font-stretch: normal'>Remates realizados a portería</span></td>
+  font-stretch: normal'>Remates realizados a porterÃ­a</span></td>
  </tr>
  <tr height=20 style='height:15.0pt'>
   <td height=20 class=xl8114244 width=94 style='height:15.0pt;width:71pt'>
@@ -799,13 +799,13 @@ EXCEL -->
   height:48.0pt'><span style='box-sizing: border-box;border-top-style:initial;
   border-right-style:initial;border-left-style:initial;border-top-color:initial;
   border-right-color:initial;border-left-color:initial;border-image: initial;
-  outline: 0px;font-stretch: normal'>Remates recibidos fuera del área</span></td>
+  outline: 0px;font-stretch: normal'>Remates recibidos fuera del Ã¡rea</span></td>
   <td class=xl1514244></td>
   <td colspan=3 class=xl7614244 style='border-right:.5pt solid black'><span
   style='box-sizing: border-box;border-top-style:initial;border-right-style:
   initial;border-left-style:initial;border-top-color:initial;border-right-color:
   initial;border-left-color:initial;border-image: initial;outline: 0px;
-  font-stretch: normal'>Remates recibidos dentro del área</span></td>
+  font-stretch: normal'>Remates recibidos dentro del Ã¡rea</span></td>
  </tr>
  <tr height=20 style='height:15.0pt'>
   <td height=20 class=xl8114244 width=94 style='height:15.0pt;width:71pt'>
@@ -874,7 +874,7 @@ EXCEL -->
   style='box-sizing: border-box;border-top-style:initial;border-right-style:
   initial;border-left-style:initial;border-top-color:initial;border-right-color:
   initial;border-left-color:initial;border-image: initial;outline: 0px;
-  font-stretch: normal'>Posesión %</span></td>
+  font-stretch: normal'>PosesiÃ³n %</span></td>
  </tr>
  <tr height=20 style='height:15.0pt'>
   <td height=20 class=xl8114244 width=94 style='height:15.0pt;width:71pt'>
@@ -938,7 +938,7 @@ EXCEL -->
 
 
 <!----------------------------->
-<!--FINAL DE LOS RESULTADOS DEL ASISTENTE PARA PUBLICAR COMO PÁGINA WEB DE
+<!--FINAL DE LOS RESULTADOS DEL ASISTENTE PARA PUBLICAR COMO PÃGINA WEB DE
 EXCEL-->
 <!----------------------------->
 </body>
